# buddy-bridge

./: .gitignore  LICENSE  README.md  buddy  buddy-hook.cmd  buddy-hook.py  buddy.cmd  buddyhub.py  build_tty.py  dashboard.html  install_hooks.py  manage.ps1  pyproject.toml  relay.py  requirements.txt
.github/workflows/: build-apk.yml  ci.yml  release.yml
android/: debug.keystore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/claudebuddy/bridge/: BuddyApp.kt  MainActivity.kt
android/app/src/main/java/com/claudebuddy/bridge/ble/: BleManager.kt  NusProtocol.kt
android/app/src/main/java/com/claudebuddy/bridge/data/: Settings.kt
android/app/src/main/java/com/claudebuddy/bridge/http/: BuddyHttpServer.kt
android/app/src/main/java/com/claudebuddy/bridge/hub/: Hub.kt  Pending.kt
android/app/src/main/res/values/: styles.xml
buddybridge/: __init__.py  build_tty.py  config.py  hook.py  hub.py  launcher.py  relay.py  tray.py  winapp.py
buddybridge/ctl/: __init__.py  __main__.py  hooks.py  services.py  tunnel.py
buddybridge/resources/: __init__.py  dashboard.html
buddybridge/resources/characters/tty/: manifest.json
deploy/: .env.example  docker-compose.existing-traefik.yml  docker-compose.yml
docs/: usage-draft.md
docs/superpowers/plans/: 2026-06-09-buddybridge-packaging-foundation.md  2026-06-09-buddyctl-cli.md  2026-06-10-single-url-hub.md
docs/superpowers/specs/: 2026-06-10-single-url-hub-design.md
packaging/: buddy.spec
systemd/: buddy-tunnel.service  buddyhub.service
tests/: test_config.py  test_ctl_cli.py  test_ctl_hooks.py  test_ctl_services.py  test_ctl_tunnel.py  test_hub_dashboard.py  test_hub_relay_stream.py  test_packaging.py  test_shims.py  test_tray.py  test_winapp.py
(+4 files in other folders)
