[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-bridge"
version = "0.2.0"
description = "Bridge Claude Code CLI sessions across machines to an M5Stick Hardware Buddy."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ttpears" }]
dependencies = []

[project.optional-dependencies]
relay = ["bleak>=0.21"]
tty = ["Pillow>=10.0"]
gui = ["pystray>=0.19", "Pillow>=10.0"]
dev = ["pytest>=7.0"]

[project.scripts]
buddyctl = "buddybridge.ctl:main"
buddyhub = "buddybridge.hub:main"
buddy-relay = "buddybridge.relay:main"
buddy = "buddybridge.launcher:main"
buddy-tray = "buddybridge.winapp:main"
build-tty = "buddybridge.build_tty:main"

[tool.setuptools]
packages = ["buddybridge", "buddybridge.ctl", "buddybridge.resources"]

[tool.setuptools.package-data]
"buddybridge.resources" = ["dashboard.html", "characters/tty/*"]
